vlib/v/checker/tests/assign_with_dump_multireturn_value.vv
fn two_returns() (string, string) {
	return 'hello', 'world'
}

x := dump(two_returns())
println(x)
